<resources>
    <string name="app_name">O programie</string>

    <string name="o_programie">O programie</string>
    <string name="witaj">Witaj!</string>
    <string name="bookweb">BookWeb</string>
    <string name="ok_dalej">Ok! Dalej</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="matematyka">Matematyka</string>
    <string name="informatyka">Informatyka</string>
    <string name="podziel_si_kodem">Podziel się kodem</string>
    <string name="wy_lij">Wyślij</string>
</resources>
